# sciDLO

./: .gitignore  README.md  main.nf  nextflow.config
expet/: Cargo.toml
expet/src/: main.rs
expet/test_data/: test_1.fq  test_2.fq
scTools/: Cargo.toml
scTools/expet/: Cargo.toml
scTools/expet/src/: main.rs
scTools/spcell/: Cargo.toml
scTools/spcell/src/: main.rs
scTools/utils/: Cargo.toml
scTools/utils/src/: lib.rs
scripts/: expet  gen_adapter.py  spcell
test_data/: barcodes.txt
